crates/term/src/snapshots/tome__tests__suite__insert_newline_single_cursor.snap
---
source: bin/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1                                                                             "
"  2                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" INSERT  test.txt [+]  2:1  Bot                                                 "
