crates/term/src/snapshots/tome__tests__suite__render_after_typing.snap
---
source: bin/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 abc                                                                         "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" INSERT  test.txt [+]  1:4  Top                                                 "
