crates/term/src/snapshots/tome__tests__suite__render_cursor_movement.snap
---
source: bin/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 Hello                                                                       "
"  2 World                                                                       "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  2:3  Bot                                                     "
