crates/term/src/snapshots/tome__tests__suite__render_empty.snap
---
source: bin/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:1  Top                                                     "
