crates/term/src/snapshots/tome__tests__suite__render_insert_mode.snap
---
source: bin/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 Hello                                                                       "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" INSERT  test.txt  1:1  Top                                                     "
