crates/term/src/snapshots/tome__tests__suite__render_with_selection.snap
---
source: bin/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 Hello, World!                                                               "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
" NORMAL  test.txt  1:4  Top                                                     "
