crates/term/src/snapshots/tome__tests__suite__terminal_toggle_layout.snap
---
source: crates/tome-term/src/tests.rs
expression: terminal.backend()
---
"  1 some content                                                                "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"  ~                                                                             "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" NORMAL  test.txt  1:1  Top                                                     "
"                                                                                "
